--- a/src/_includes/card-ux.html
+++ b/src/_includes/card-ux.html
@@ -1,25 +1,25 @@
-{% for topic-web-design in sorted %}
+{% for topic-digital-marketing in sorted %}
 <div class="medium-6 large-4 small-12 columns">
     <article class="article-card">
-        <a href="{{ topic-web-design.url }}">
-            <img class="art-img" src="{{site.baseurl}}/assets/img/pics/{{ topic-web-design.img }}">
+        <a href="{{ topic-digital-marketing.url }}">
+            <img class="art-img" src="{{site.baseurl}}/assets/img/pics/{{ topic-digital-marketing.img }}">
         </a>
         <div class="card-content">
             <div class="post-icon">
-                <img class="blog-icon" src="{{site.baseurl}}/assets/img/svg/{{ topic-web-design.svg }}" alt="foundation icon">
+                <img class="blog-icon" src="{{site.baseurl}}/assets/img/svg/{{ topic-digital-marketing.svg }}" alt="foundation icon">
             </div>
 
-            <p class="post-author">By <a href="../#home">{{ topic-web-design.author }}</a></p>
-            <p>{{topic-web-design.date | date: '%B %d, %Y'}}</p>
-            <a href="{{ topic-web-design.url }}">
-                <h1 class="card-h1"><strong>{{ topic-web-design.title }}</strong></h1>
+            <p class="post-author">By <a href="../#home">{{ topic-digital-marketing.author }}</a></p>
+            <p>{{topic-digital-marketing.date | date: '%B %d, %Y'}}</p>
+            <a href="{{ topic-digital-marketing.url }}">
+                <h1 class="card-h1"><strong>{{ topic-digital-marketing.title }}</strong></h1>
             </a>
             <!--{{ post.content }}-->
-            {{ topic-web-design.excerpt }}
+            {{ topic-digital-marketing.excerpt }}
             <p>
-                <a href="{{ topic-web-design.url }}" id="intro-btn" class="tiny button"><span data-description="Button - subscribe to blog" id="get-btn">Read on</span></a>
+                <a href="{{ topic-digital-marketing.url }}" id="intro-btn" class="tiny button"><span data-description="Button - subscribe to blog" id="get-btn">Read on</span></a>
             </p>
-            <!-- Go to www.addthis.com/dashboard to customize your tools --> <div class="addthis_inline_share_toolbox addthis-pad" data-url="{{site.baseurl}}{{ topic-web-design.url }}" data-title="{{ topic-web-design.title }}"></div>
+            <!-- Go to www.addthis.com/dashboard to customize your tools --> <div class="addthis_inline_share_toolbox addthis-pad" data-url="{{site.baseurl}}{{ topic-digital-marketing.url }}" data-title="{{ topic-digital-marketing.title }}"></div>
         </div>
     </article>
 </div>
