--- a/src/_includes/card-analytics.html
+++ b/src/_includes/card-analytics.html
@@ -1,3 +1,4 @@
+{% assign sorted = (site.topic-web-analytics | sort: 'date') | reverse %}
 {% for topic-web-analytics in sorted %}
 <div class="medium-6 large-4 small-12 columns">
     <article class="article-card">
