--- a/src/_includes/card-dev.html
+++ b/src/_includes/card-dev.html
@@ -1,4 +1,4 @@
-{% assign sorted = (site.topic-web-development | sort: 'date') | reverse %}
+{% assign doclist = site.topic-web-development  | sort: 'date' | reverse %}
 {% for topic-web-development in sorted %}
 <div class="medium-6 large-4 small-12 columns">
     <article class="article-card">
