updated liquid for cards

--- a/src/_includes/card-analytics.html
+++ b/src/_includes/card-analytics.html
@@ -1,4 +1,4 @@
-{% for topic-web-analytics in sorted %}
+{% for topic-web-analytics in site.topic-web-analytics %}
 <div class="medium-6 large-4 small-12 columns">
     <article class="article-card">
         <a href="{{ topic-web-analytics.url }}">
