--- a/src/_includes/card-ux.html
+++ b/src/_includes/card-ux.html
@@ -1,4 +1,4 @@
-{% for topic-digital-marketing in sorted %}
+{% for topic-digital-marketing in site.topic-digital-marketing %}
 <div class="medium-6 large-4 small-12 columns">
     <article class="article-card">
         <a href="{{ topic-digital-marketing.url }}">
