--- a/src/_includes/card-all.html
+++ b/src/_includes/card-all.html
@@ -1,4 +1,4 @@
-{% for topic-all in sorted %}
+{% for topic-all in site.topic-all %}
 <div class="medium-6 large-4 small-12 columns article-test">
     <article class="article-card">
         <a href="{{ topic-all.url }}">
