--- a/src/_includes/card-dev.html
+++ b/src/_includes/card-dev.html
@@ -1,4 +1,4 @@
-{% for topic-web-development in sorted %}
+{% for topic-web-development in site.topic-web-development %}
 <div class="medium-6 large-4 small-12 columns">
     <article class="article-card">
         <a href="{{ topic-web-development.url }}">
