--- a/src/_layouts/thank-you.html
+++ b/src/_layouts/thank-you.html
@@ -17,7 +17,7 @@
         <meta http-equiv="refresh" content="180; url=/">
         {% endif %}
         <link rel="icon" href="https://evanrosaportfolio.com/assets/img/pics/logo-blk.png" type="image/gif" sizes="16x16">
-        <!--<link rel="stylesheet" href="{{'/assets/css/app.css' | prepend: site.baseurl }}" type="text/css" media="all">-->
+        <link rel="stylesheet" href="{{'/assets/css/app.css' | prepend: site.baseurl }}" type="text/css" media="all">
 
         <script async src='https://www.google-analytics.com/analytics.js'></script>
 
