disabled reveal popup

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -32,7 +32,7 @@
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- End Google Tag Manager (noscript) -->
 
-        <div class="reveal medium" id="exampleModal1" data-reveal>
+       <!-- <div class="reveal medium" id="exampleModal1" data-reveal>
             <div class="row">
                 <div class="small-12 columns text-center">
                     <p class="lead">Thank you for visiting my portfolio!</p>
@@ -42,7 +42,7 @@
                     </button>
                 </div>
             </div>
-        </div>
+        </div>-->
         {% include header.html %}
         {{ content }}
         {% include footer.html %}
