design and seo updates

--- a/src/_includes/contact-search.html
+++ b/src/_includes/contact-search.html
@@ -6,8 +6,8 @@
             <div>
                 <div class="row text-center">
                     <div class="columns">
-                        <h3>Get In Touch</h3>
-                        <p class="type-space">I'm available for consulation by appointment only and can be reached by<br>
+                        <h3>Contact</h3>
+                        <p class="type-space">I'll be happy you discuss with you my experience and expertise. I can be reached by<br>
                             <span id="h3-typer" class="typer" data-delay="90"  data-words="filling out this form., phone., email."></span>
 
                             <span class="cursor" data-cursordisplay="_" data-owner="h1-typer" style="transition: all 0.1s; opacity: 1;">_</span>
