--- a/src/_includes/contact.html
+++ b/src/_includes/contact.html
@@ -1,7 +1,7 @@
 <!--Section Five: Contact -->
 <section id="contact" data-magellan-target="contact" class="introduction">
     <div class="wrap-contactImg parallaxParent">
-        <div class="contact-back" data-interchange="[../assets/img/pics/sm-wht-desk.jpg, default], [../assets/img/pics/sm-wht-desk.jpg, small], [../assets/img/pics/med-wht-desk.jpg, medium], [../assets/img/pics/lg-wht-desk.jpg, large], [../assets/img/pics/xl-wht-desk.jpg, xlarge], [../assets/img/pics/xxl-wht-desk.jpg, xxlarge], [../assets/img/pics/retina-wht-desk.jpg, retina]">
+        <div class="contact-back" data-interchange="[../assets/img/pics/xl-wht-desk.jpg, default], [../assets/img/pics/sm-wht-desk.jpg, small], [../assets/img/pics/med-wht-desk.jpg, medium], [../assets/img/pics/lg-wht-desk.jpg, large], [../assets/img/pics/xl-wht-desk.jpg, xlarge], [../assets/img/pics/xxl-wht-desk.jpg, xxlarge], [../assets/img/pics/retina-wht-desk.jpg, retina]">
             <noscript><img src="../assets/img/pics/office-view.jpeg" alt="Contact Me"></noscript>
         </div>
         <div class="contact-text">
@@ -46,8 +46,10 @@
                         <p><a href="tel:571-762-1956" data-description="Contact Phone Number">(571) 762-1956</a></p>
 
                         <div style="position:relative;">
-                            <div class="codegena_iframe" data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d198712.6384361666!2d-77.01743567660344!3d38.9037456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7b78cb5224875%3A0x8472e2656940e261!2sEvRo+Designs!5e0!3m2!1sen!2sus!4v1462299175913" style="height:450px;width:100%;max-width:500px;" data-responsive="true"></div>
-                            <a class="mobile-width" data-description="Contact Google Map" href="https://www.google.com/maps/place/425+L+St+NW,+Washington,+DC+20001/@38.9041259,-77.019778,17z/data=!3m1!4b1!4m5!3m4!1s0x89b7b78cb47594cf:0xa123431894dd8e72!8m2!3d38.9041259!4d-77.017584" style="position:absolute; top:0; left:0; display:inline-block; width:500px; height:450px; z-index:5;" target="_blank"></a>
+
+                            <div id="map"></div>
+
+                            
                         </div>
 
 
