--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -954,6 +954,9 @@ a.a-c:hover, a.a-c:focus{
 .reveal{
     color: $navy;
 }
+.reveal-subscribe{
+    font-size: 200%;
+}
 #search-btn p{
     font-size: 200%;
     text-shadow: 1px 1px 1px rgba(0,0,0,.5);
