--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -65,5 +65,26 @@
         <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
         <script defer src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
 
+        <script async>
+            //MAP
+            // Initialize and add the map
+            function initMap() {
+              // The location of Uluru
+              var uluru = {lat: 38.9072, lng: -77.0369};
+              // The map, centered at Uluru
+              var map = new google.maps.Map(
+                  document.getElementById('map'), {zoom: 12, center: uluru});
+              // The marker, positioned at Uluru
+              var marker = new google.maps.Marker({position: uluru, map: map});
+            }
+            //END Map
+        </script>
+        <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCYoe9UaozehSSDvESb5fAHwVYQ4crpWc&callback=initMap">
+        </script>
+
+
+
+
     </body>
 </html>
