--- a/src/_includes/contact-search.html
+++ b/src/_includes/contact-search.html
@@ -17,7 +17,7 @@
                 <div class="row large-unstack">
 
                     <div class="columns">
-                        <form id="mail-contact" name="evroD-article-contact-form" action="/thanks" data-abide novalidate netlify netlify-honeypot="bot-field">
+                        <form id="mail-contact" name="evroD-article-contact-form" action="/thank-you" data-abide novalidate netlify netlify-honeypot="bot-field">
                             <div class="contactForm">
                                 <div data-abide-error class="alert callout" style="display: none;">
                                     <p><i class="fi-alert"></i> There are some errors in your form.</p>
