--- a/src/_includes/contact.html
+++ b/src/_includes/contact.html
@@ -55,7 +55,7 @@
 
                     </div>
                     <div class="columns">
-                        <form id="mail-contact" name="evroD-contact-form" action="/thanks" data-abide novalidate netlify netlify-honeypot="bot-field">
+                        <form id="mail-contact" name="evroD-contact-form" action="/thank-you" data-abide novalidate netlify netlify-honeypot="bot-field">
                             <div class="contactForm">
                                 <div data-abide-error class="alert callout" style="display: none;">
                                     <p><i class="fi-alert"></i> There are some errors in your form.</p>
