--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -9,9 +9,10 @@
         })(window,document,'script','dataLayer','GTM-56KWJ8F');</script>
         <!-- End Google Tag Manager -->
         <meta charset="utf-8" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="x-ua-compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="alternate" href="https://evanrosaportfolio.com" hreflang="en-us" />
+        <link rel="alternate" href="https://evanrosaportfolio.com/" hreflang="en-us" />
         <meta name="msvalidate.01" content="9697989B6A63107D1F0DCCF9F8E5CC3A" />
         {% if page.url == "/404.html" %}
         <meta http-equiv="refresh" content="180; url=/">
